[gd_scene load_steps=15 format=2]

[ext_resource path="res://Snake.gd" type="Script" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/snake_bite/snakebitesprite_1.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/snake_bite/snakebitesprite_3.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/snake_bite/snakebitesprite_0.png" type="Texture" id=4]
[ext_resource path="res://Placeholder Textures for Shards of the Past/snake_sprites1/snakesprite_0.png" type="Texture" id=5]
[ext_resource path="res://Placeholder Textures for Shards of the Past/snake_bite/snakebitesprite_2.png" type="Texture" id=6]
[ext_resource path="res://Placeholder Textures for Shards of the Past/snake_sprites1/snakesprite_1.png" type="Texture" id=7]
[ext_resource path="res://Placeholder Textures for Shards of the Past/snake_sprites1/snakesprite_2.png" type="Texture" id=8]
[ext_resource path="res://Placeholder Textures for Shards of the Past/snake_sprites1/snakesprite_3.png" type="Texture" id=9]
[ext_resource path="res://Placeholder Textures for Shards of the Past/snake_bite/snake_hurt.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 7 )

[sub_resource type="CircleShape2D" id=3]
radius = 120.004

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[node name="Snake" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
frames = SubResource( 1 )
animation = "attack"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="TimerFall" type="Timer" parent="."]
wait_time = 0.017

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.75

[node name="Area2D - Hurt Area" type="Area2D" parent="."]
position = Vector2( 6, 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - Hurt Area"]
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 8, 6 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 9, -7 )
enabled = true
cast_to = Vector2( 15, 0 )
collision_mask = 524288

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 1 )
texture = ExtResource( 10 )

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.25
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="TimerFall" to="." method="_on_TimerFall_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area2D - Hurt Area" to="." method="_on_Area2D__Hurt_Area_body_entered"]
